Add cluster domain

--- a/services/ckk43848-rabbitmq/values.yaml
+++ b/services/ckk43848-rabbitmq/values.yaml
@@ -1,4 +1,5 @@
 rabbitmq:
+  clusterDomain: k8s.cluster.local
   diagnosticsMode:
     enabled: true
   image:
@@ -9,7 +10,7 @@ rabbitmq:
   auth:
     username: admin
     existingPasswordSecret: rabbitmq-secrets
-    # existingErlangSecret: rabbitmq-secrets
+    existingErlangSecret: rabbitmq-secrets
   extraPlugins: rabbitmq_jms_topic_exchange,rabbitmq_stomp
   persistence:
     enabled: false
